page overflow stopped

--- a/index.css
+++ b/index.css
@@ -1,8 +1,11 @@
+body{
+  overflow-x: hidden;
+}
 li {
     list-style: none;
     float: right;
     margin: 10px;
-    margin-top: 20px;
+    margin-top: 2px;
     padding: 0.5em;
     font-size: 20px;
 }
